--- a/aircon.yaml
+++ b/aircon.yaml
@@ -205,6 +205,7 @@ lvgl:
       width: 100%
       height: 30
       text_font: montserrat_18
+    
     - id: ac_button_style
       bg_color: 0x4A4A4A # Dark grey
       text_color: 0xFFFFFF
@@ -222,6 +223,10 @@ lvgl:
       pad_all: 1
       text_font: montserrat_14
 
+    - id: obj_style
+      pad_all: 1
+      pad_left: 3
+      pad_right: 3 
   pages:
     - id: main_page
       widgets:
@@ -240,7 +245,7 @@ lvgl:
         - obj:
             id: ac_controls_container
             x: 0
-            y: 35 # Position below the header
+            y: 30 # Position below the header
             width: 239 # Full width of Lanbon L8 display
             height: 280 # Remaining height (320 total - 30 header - 5 padding approx)
             # Styles for this container can be added if needed, e.g., background
@@ -256,6 +261,7 @@ lvgl:
                     flex_align_cross: CENTER
                   width: SIZE_CONTENT
                   height: SIZE_CONTENT
+                  styles: obj_style
                   widgets:
                     - button:
                         id: spin_down
@@ -434,7 +440,7 @@ lvgl:
                     - button:
                         id: fan_auto_btn
                         styles: ac_button_style
-                        width: 50
+                        width: 49
                         height: 30
                         on_click:
                           - homeassistant.service:
@@ -448,7 +454,7 @@ lvgl:
                     - button:
                         id: fan_low_btn
                         styles: ac_button_style
-                        width: 48
+                        width: 47
                         height: 30
                         on_click:
                           - homeassistant.service:
@@ -462,7 +468,7 @@ lvgl:
                     - button:
                         id: fan_med_btn
                         styles: ac_button_style
-                        width: 48
+                        width: 47
                         height: 30
                         on_click:
                           - homeassistant.service:
@@ -476,7 +482,7 @@ lvgl:
                     - button:
                         id: fan_high_btn
                         styles: ac_button_style
-                        width: 48
+                        width: 47
                         height: 30
                         on_click:
                           - homeassistant.service:
@@ -634,3 +640,4 @@ script:
           // Add other fan buttons here
 
 captive_portal:
+
